<resources>
    <string name="app_name">La Tradicional1994</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Iniciar_sesion">Iniciar sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="textview">TextView</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="tel_fono">Teléfono</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="verificar">Verificar</string>
    <string name="correo_no_verificaco">Correo No Verificaco</string>
    <string name="pantalla_cliente">Pantalla cliente</string>
    <string name="no_verificado">No verificado</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="pantalla_admin">Pantalla admin</string>
    <string name="_1_cliente_2_administrador_3_camarero_4_cocinero_5_transportista">*1-Cliente 2-Administrador 3-Camarero 4-Cocinero 5 Transportista</string>
    <string name="rol">Rol</string>
    <string name="atr_s">Atrás</string>
    <string name="agregar">Agregar</string>
    <string name="pantalla_camarero">Pantalla camarero</string>
    <string name="eliminar">Eliminar</string>
    <string name="darse_de_baja">Darse de Baja</string>
    <string name="introduce_tu_correo_para_confirmar_que_quiere_darse_de_baja">Introduce tu correo para confirmar que quiere darse de baja</string>
    <string name="aceptar">Aceptar</string>
    <string name="buscar_usuario">Buscar Usuario</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="dar_de_alta">Dar de alta</string>
    <string name="buscar">Buscar</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="telefono">telefono</string>
    <string name="editar_cuenta">Editar cuenta</string>
    <string name="editar">Editar</string>
    <string name="ingresar_hora">Ingresar hora</string>
    <string name="abrir_calendario">Abrir Calendario</string>
    <string name="reservar_mesa">Reservar mesa</string>
    <string name="fecha">Fecha</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="hora">Hora</string>
    <string name="selecionar_hora">selecionar hora</string>
    <string name="hacer_reserva">Hacer reserva</string>
    <string name="selec_personas">Seleccionar personas</string>
    <string name="personas">Personas:</string>
    <string name="subirybajar">subirybajar:</string>
    <string name="a_adir">Añadir</string>
    <string name="agua">Agua</string>
    <string name="nuggets">Nuggets</string>
    <string name="nachos">Nachos</string>
    <string name="reservar_mesa_y_comida">reservar mesa y comida</string>
    <string name="patatas">Patatas</string>
    <string name="prueba">prueba</string>
    <string name="fanta">fanta</string>
    <string name="finguers">finguers</string>
    <string name="id_usuario">ID USUARIO:</string>
    <string name="fechaaa">FECHA:</string>
    <string name="horaaaa">HORA:</string>
    <string name="ver_reservas">Ver reservas</string>
    <string name="cargar">Cargar</string>
    <string name="ver_reservas_de_mesa">Ver reservas de mesa</string>
    <string name="ver_reserva_de_mesa_y_comida">Ver reserva de mesa y comida</string>
    <string name="personasaaaa">Personas</string>
    <string name="ver_comida_reservada">Ver comida reservada</string>
    <string name="comida">Comida</string>
    <string name="anular">Anular</string>
    <string name="ver_mis_reservas">Ver mis reservas</string>
    <string name="ver_mis_reservas_de_mesa">Ver mis reservas de mesa</string>
    <string name="ver_mis_reservas_de_mesa_y_comida">Ver mis reservas de mesa y comida</string>
    <string name="hh_mm">*(hh:mm)</string>
    <string name="yyyy_mm_dd">*(yyyy-mm-dd)</string>
    <string name="_12">12€</string>
    <string name="lagarto_ib_rico_con_sal_rosa">Lagarto ibérico con sal rosa</string>
    <string name="tortilla_de_perretxicos_al_ajillo">Tortilla de perretxicos al ajillo</string>
    <string name="_10">10€</string>
    <string name="setas_empanadas_con_alioli">Setas empanadas con alioli</string>
    <string name="especialidades">ESPECIALIDADES</string>
    <string name="del_mar">DEL MAR</string>
    <string name="calamares_a_la_andaluza_con_alioli">Calamares a la andaluza con alioli</string>
    <string name="rabas_con_alioli_negro">Rabas con alioli negro</string>
    <string name="pulpo_a_la_gallega">Pulpo a la gallega</string>
    <string name="los_cl_sicos">LOS CLÁSICOS</string>
    <string name="oreja_al_mojo_rojo">Oreja al mojo rojo</string>
    <string name="callos_a_la_madrile_a">Callos a la madrileña</string>
    <string name="choricitos_a_la_sidra">Choricitos a la sidra</string>
    <string name="todo">TODO</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="hacer_pedido_a_domicilio">Hacer pedido a domicilio</string>
    <string name="anular_reserva">Anular reserva</string>
    <string name="total">TOTAL €:</string>
    <string name="tramitar_pedido">Tramitar pedido</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="mesa">Mesa</string>
    <string name="spmesa">spmesa</string>
    <string name="seleccione_el_n_mero_de_mesa">Seleccione el número de mesa:</string>
    <string name="tomar_nota">Tomar nota</string>
    <string name="string_tomar_nota" />
    <string name="ver_pedidos">Ver pedidos</string>
    <string name="coste">Coste</string>
    <string name="ver_mis_pedidos">Ver mis pedidos</string>
    <string name="hacer_pedido_a_mesa">Hacer pedido a mesa</string>
    <string name="pedidos_a_domicilio">Pedidos a domicilio</string>
    <string name="pedidos_a_mesa">Pedidos a mesa</string>
    <string name="ver_repartos">Ver repartos</string>
    <string name="direcci_n">Dirección</string>
    <string name="id_pedido">ID pedido</string>
    <string name="id_usuariopo">ID Usuario</string>
    <string name="ver_comida_a_mesa">Ver comida a mesa</string>
    <string name="ver_comida_a_domicilio">Ver comida a domicilio</string>
    <string name="ver_mis_pedidos_a_mesa">Ver mis pedidos a mesa</string>
    <string name="ver_mis_pedidos_a_domicilio">Ver mis pedidos a domicilio</string>
    <string name="ingrese_id_pedido">Ingrese ID pedido</string>
    <string name="pantalla_cocinero">pantalla cocinero</string>
    <string name="string_cerrar_sesi_n" />
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="altarol">altarol</string>


    <string-array name="lista">
        <item>2</item>
        <item>4</item>
        <item>6</item>
    </string-array>
</resources>